// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Authenticated Users. Renders landing page 1`] = `
<div>
  <div>
    <div
      className="makeStyles-page-4"
    >
      <div>
        <header
          className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-34 makeStyles-info-41 makeStyles-fixed-36 MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
        >
          <div
            className="MuiToolbar-root MuiToolbar-regular makeStyles-container-37 MuiToolbar-gutters"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-title-38"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <a
                  href="/"
                  onClick={[Function]}
                >
                  <img
                    alt="logo"
                    className="makeStyles-logo-33"
                    src="logo-white.png"
                  />
                </a>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <div
              className="makeStyles-hidden-50 PrivateHiddenCss-smDown-132"
            >
              <div
                className="makeStyles-collapse-51"
              >
                <ul
                  className="MuiList-root makeStyles-list-448 makeStyles-mlAuto-464 MuiList-padding"
                >
                  <li
                    className="MuiListItem-root makeStyles-listItem-449 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-navLink-451"
                      href="/"
                      onClick={[Function]}
                    >
                      My Lists
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-listItem-449 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-navLink-451"
                      href="/list-ideas"
                      onClick={[Function]}
                    >
                      Gift List Ideas
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-listItem-449 MuiListItem-gutters"
                    disabled={false}
                  >
                    <div
                      className="makeStyles-manager-467"
                    >
                      <div
                        className="makeStyles-target-469"
                      >
                        <button
                          aria-haspopup="true"
                          aria-label="Notifications"
                          aria-owns={null}
                          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-286 makeStyles-transparent-309 makeStyles-navLink-451"
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDragLeave={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <span
                            className="MuiButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              className="MuiSvgIcon-root makeStyles-buttonIcon-483"
                              focusable="false"
                              role="presentation"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M0 0h20v20H0V0z"
                                fill="none"
                                transform="scale(1.2, 1.2)"
                              />
                              <path
                                d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"
                                transform="scale(1.2, 1.2)"
                              />
                            </svg>
                            <b
                              className="makeStyles-caret-484"
                            />
                          </span>
                          <span
                            className="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </header>
      </div>
      <div
        className="makeStyles-main-6"
      >
        <div
          className="makeStyles-section-524"
        >
          <div
            className="makeStyles-container-522"
          >
            <div
              className="MuiGrid-root makeStyles-grid-181  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-285  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-12"
              >
                <h1
                  className="makeStyles-title-525"
                >
                  Your lists
                </h1>
                <br />
                <div
                  className="MuiGrid-root makeStyles-grid-181  MuiGrid-container"
                >
                  <div
                    className="MuiGrid-root makeStyles-grid-285  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
                  >
                    <div
                      className="makeStyles-card-359 makeStyles-cardProfile-361"
                    >
                      <div
                        className="makeStyles-cardHeader-374 makeStyles-cardHeaderImage-376"
                      >
                        <a
                          href="/lists/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                        >
                          <img
                            alt="..."
                            className="makeStyles-listImage-529"
                            src="/images/celebration-default.jpg"
                          />
                        </a>
                        <div
                          className="makeStyles-coloredShadow-490"
                          style={
                            Object {
                              "backgroundImage": "url(/images/celebration-default.jpg)",
                              "opacity": "1",
                            }
                          }
                        />
                      </div>
                      <div
                        className="makeStyles-cardBody-619"
                      >
                        <div
                          className="makeStyles-defaultFontStyle-386 makeStyles-infoText-393"
                        >
                          <a
                            href="/lists/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                          >
                            <h6
                              className="makeStyles-cardCategory-526"
                            >
                              My Birthday List
                            </h6>
                          </a>
                        </div>
                        <p
                          className="makeStyles-cardDescription-527"
                        >
                          Birthday
                        </p>
                      </div>
                      <div
                        className="makeStyles-cardFooter-626 makeStyles-cardFooterProfile-627 makeStyles-justifyContentCenter-528"
                      >
                        <a
                          href="/lists/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                        >
                          <button
                            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-286 makeStyles-info-290 makeStyles-round-313"
                            disabled={false}
                            onBlur={[Function]}
                            onDragLeave={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="MuiButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                className="MuiSvgIcon-root"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                                />
                              </svg>
                               View
                            </span>
                            <span
                              className="MuiTouchRipple-root"
                            />
                          </button>
                        </a>
                        <a
                          href="/edit/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                        >
                          <button
                            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-286 makeStyles-success-291 makeStyles-round-313"
                            disabled={false}
                            onBlur={[Function]}
                            onDragLeave={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="MuiButton-label"
                            >
                              <span
                                aria-hidden={true}
                                className="material-icons MuiIcon-root"
                              >
                                mode_edit
                              </span>
                               Edit
                            </span>
                            <span
                              className="MuiTouchRipple-root"
                            />
                          </button>
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    className="MuiGrid-root makeStyles-grid-285  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
                  >
                    <div
                      className="makeStyles-addList-541"
                    >
                      <div>
                        <div>
                          <div
                            className="makeStyles-centerButton-543"
                          >
                            <button
                              className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-286 makeStyles-lg-311 makeStyles-info-290 makeStyles-round-313 makeStyles-justIcon-316"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragLeave={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              <span
                                className="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="MuiSvgIcon-root"
                                  focusable="false"
                                  role="presentation"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M14 10H2v2h12v-2zm0-4H2v2h12V6zm4 8v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM2 16h8v-2H2v2z"
                                  />
                                </svg>
                              </span>
                              <span
                                className="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                          <p
                            className="makeStyles-cardDescription-542"
                          >
                            Create a New List
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-285  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-12"
              >
                <h1
                  className="makeStyles-title-525"
                >
                  Lists Shared With You
                </h1>
                <br />
                <div
                  className="MuiGrid-root makeStyles-grid-181  MuiGrid-container"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-flexer-5"
      />
      <div>
        <div />
        <footer
          className="makeStyles-footer-421 makeStyles-footer-617"
        >
          <div
            className="makeStyles-container-427"
          >
             
            <div>
              <div
                className="makeStyles-left-614"
              >
                <ul
                  className="MuiList-root makeStyles-list-613 MuiList-padding"
                >
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-612 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-611"
                      href="/"
                    >
                      © 
                      2020
                       ewelists
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-612 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-611"
                      href="/contact"
                    >
                      Contact Us
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-612 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-611"
                      href="/#about"
                    >
                      About us
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-612 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-611"
                      href="/privacy"
                    >
                      Privacy
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-612 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-611"
                      href="/terms"
                    >
                      Terms
                    </a>
                  </li>
                </ul>
              </div>
              <div
                className="makeStyles-rightLinks-618"
              >
                <ul>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-286 makeStyles-facebook-297 makeStyles-simple-308 makeStyles-justIcon-316"
                      href="https://www.facebook.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-facebook"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-286 makeStyles-twitter-296 makeStyles-simple-308 makeStyles-justIcon-316"
                      href="https://twitter.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-twitter"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-286 makeStyles-instagram-307 makeStyles-simple-308 makeStyles-justIcon-316"
                      href="https://www.instagram.com/ewelists/"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-instagram"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              className="makeStyles-clearFix-437"
            />
          </div>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for Non Authenticated Users. Renders Landing Page 1`] = `
<div>
  <div>
    <div>
      <header
        className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-34 makeStyles-info-41 makeStyles-fixed-36 MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
      >
        <div
          className="MuiToolbar-root MuiToolbar-regular makeStyles-container-37 MuiToolbar-gutters"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-title-38"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <a
                href="/"
                onClick={[Function]}
              >
                <img
                  alt="logo"
                  className="makeStyles-logo-33"
                  src="logo-white.png"
                />
              </a>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <div
            className="makeStyles-hidden-50 PrivateHiddenCss-smDown-132"
          >
            <div
              className="makeStyles-collapse-51"
            >
              <ul
                className="MuiList-root makeStyles-list-142 makeStyles-mlAuto-158 MuiList-padding"
              >
                <li
                  className="MuiListItem-root makeStyles-listItem-143 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-navLink-145"
                    href="/list-ideas"
                    onClick={[Function]}
                  >
                    Gift List Ideas
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-listItem-143 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-navLink-145"
                    href="/login"
                    onClick={[Function]}
                  >
                    Log In
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-listItem-143 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-navLink-145"
                    href="/signup"
                    onClick={[Function]}
                  >
                    Sign Up
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      className="makeStyles-main-6"
    >
      <div
        className="makeStyles-section-176"
      >
        <div
          className="makeStyles-container-174"
        >
          <div
            className="MuiGrid-root makeStyles-grid-182  MuiGrid-container"
          >
            <div
              className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
            >
              <h1
                className="makeStyles-title-177"
              >
                The gift list tool for your new arrivals baby shower, birthday or christmas.
              </h1>
              <br />
              <div
                className="makeStyles-buttonContainer-180"
              >
                <a
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-287 makeStyles-lg-312 makeStyles-danger-294"
                  href="/signup"
                  onBlur={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                >
                  <span
                    className="MuiButton-label"
                  >
                    Create Your List - It's Free!
                  </span>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </a>
                <button
                  className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-287 makeStyles-lg-312 makeStyles-info-291"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label"
                  >
                    Explore Ewelists
                  </span>
                  <span
                    className="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-7"
            >
              <div
                className="makeStyles-imgContainer-178"
              >
                <img
                  alt="..."
                  src="laptop-mockup.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-section-320 makeStyles-sectionGray-321"
      >
        <div
          className="makeStyles-container-319"
        >
          <div
            className="MuiGrid-root makeStyles-grid-182  MuiGrid-container MuiGrid-justify-xs-center"
          >
            <div
              className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 MuiGrid-grid-md-8"
            >
              <h2
                className="makeStyles-title-322"
              >
                Get organised with Ewelists
              </h2>
              <h5
                className="makeStyles-description-323"
              >
                Ewelists helps new and expecting parents get the gifts they need for their new arrival. Create a gift list, which you can share with friends and family, for free.
              </h5>
            </div>
          </div>
          <div>
            <div
              className="MuiGrid-root makeStyles-grid-182  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-infoArea-325 makeStyles-infoArea-324"
                >
                  <div
                    className="makeStyles-iconWrapper-326 makeStyles-primary-327 makeStyles-iconWrapperVertical-338"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root makeStyles-icon-334 makeStyles-iconVertical-339"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                      />
                    </svg>
                  </div>
                  <div
                    className="makeStyles-descriptionWrapper-335"
                  >
                    <h4
                      className="makeStyles-title-336"
                    >
                      Sign Up
                    </h4>
                    <div
                      className="makeStyles-description-337"
                    >
                      Sign up using one of your social accounts, or alternatively just an email, to create your first list.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-infoArea-325 makeStyles-infoArea-324"
                >
                  <div
                    className="makeStyles-iconWrapper-326 makeStyles-rose-332 makeStyles-iconWrapperVertical-338"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root makeStyles-icon-334 makeStyles-iconVertical-339"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"
                      />
                    </svg>
                  </div>
                  <div
                    className="makeStyles-descriptionWrapper-335"
                  >
                    <h4
                      className="makeStyles-title-336"
                    >
                      Add Items
                    </h4>
                    <div
                      className="makeStyles-description-337"
                    >
                      Add items by copying the link to the product, or alternatively use one of our ready made lists if you're looking for inspiration.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-infoArea-325 makeStyles-infoArea-324"
                >
                  <div
                    className="makeStyles-iconWrapper-326 makeStyles-info-331 makeStyles-iconWrapperVertical-338"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root makeStyles-icon-334 makeStyles-iconVertical-339"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                      />
                    </svg>
                  </div>
                  <div
                    className="makeStyles-descriptionWrapper-335"
                  >
                    <h4
                      className="makeStyles-title-336"
                    >
                      Share
                    </h4>
                    <div
                      className="makeStyles-description-337"
                    >
                      Share your first ewelist with friends and family.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-section-350"
      >
        <div
          className="makeStyles-container-349"
        >
          <div
            className="makeStyles-section-353"
          >
            <div
              className="MuiGrid-root makeStyles-grid-182  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-286 makeStyles-mlAuto-351 makeStyles-mrAuto-352 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-10 MuiGrid-grid-md-10"
              >
                <div>
                  <div
                    className="makeStyles-card-360 makeStyles-cardPlain-361 makeStyles-cardBlog-363"
                  >
                    <div
                      className="MuiGrid-root makeStyles-grid-182  MuiGrid-container"
                    >
                      <div
                        className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
                      >
                        <div
                          className="makeStyles-cardHeader-375 makeStyles-cardHeaderPlain-376 makeStyles-cardHeaderImage-377"
                        >
                          <a
                            href="/list-ideas/christmas-ideas-for-toddlers"
                          >
                            <img
                              alt="..."
                              className="makeStyles-leftImage-357"
                              src="christmastoddlers.jpg"
                            />
                          </a>
                          <div
                            style={
                              Object {
                                "backgroundImage": "url(christmastoddlers.jpg)",
                                "opacity": "1",
                              }
                            }
                          />
                        </div>
                      </div>
                      <div
                        className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-7"
                      >
                        <div
                          className="makeStyles-defaultFontStyle-387 makeStyles-infoText-394"
                        >
                          <h6
                            className="makeStyles-cardCategory-355"
                          >
                            <a
                              href="/list-ideas/christmas-ideas-for-toddlers"
                            >
                              Christmas Ideas for Toddlers
                            </a>
                          </h6>
                        </div>
                        <h3
                          className="makeStyles-cardTitle-354"
                        >
                          <a
                            href="/list-ideas/christmas-ideas-for-toddlers"
                          >
                            Great Christmas ideas for toddlers and young children
                          </a>
                        </h3>
                        <p
                          className="makeStyles-description1-356"
                        >
                          If you are stuck wondering what to get a toddler for Christmas, here are some of our favourite ideas! Toddlers love to mimic adults and join in ‘helping’ with every day tasks. Here are some great ideas to encourage role play...
                          <a
                            href="/list-ideas/christmas-ideas-for-toddlers"
                          >
                             
                            Read More
                             
                          </a>
                        </p>
                      </div>
                      <div
                        className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
                      >
                        <div
                          className="makeStyles-cardHeader-375 makeStyles-cardHeaderPlain-376 makeStyles-cardHeaderImage-377"
                        >
                          <a
                            href="/list-ideas/christmas-ideas-for-toddlers"
                          >
                            <img
                              alt="..."
                              className="makeStyles-leftImageMobile-358"
                              src="christmastoddlers.jpg"
                            />
                          </a>
                          <div
                            style={
                              Object {
                                "backgroundImage": "url(christmastoddlers.jpg)",
                                "opacity": "1",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="makeStyles-card-360 makeStyles-cardPlain-361 makeStyles-cardBlog-363"
                  >
                    <div
                      className="MuiGrid-root makeStyles-grid-182  MuiGrid-container"
                    >
                      <div
                        className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-7"
                      >
                        <div
                          className="makeStyles-defaultFontStyle-400 makeStyles-dangerText-410"
                        >
                          <h6
                            className="makeStyles-cardCategory-355"
                          >
                            <a
                              href="/list-ideas/nursery-list"
                            >
                              Nursery List
                            </a>
                          </h6>
                        </div>
                        <h3
                          className="makeStyles-cardTitle-354"
                        >
                          <a
                            href="/list-ideas/nursery-list"
                          >
                            All the items you need for your baby’s bedroom
                          </a>
                        </h3>
                        <p
                          className="makeStyles-description1-356"
                        >
                          Have you been gushing over the possibilities for the cute little nursery or area you want to create for your baby. The nesting phase is such a special time in the lead up to the arrival of your baby and choosing how to decorate your nursery can bring immense joy...
                          <a
                            href="/list-ideas/nursery-list"
                          >
                             
                            Read More
                             
                          </a>
                        </p>
                      </div>
                      <div
                        className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
                      >
                        <div
                          className="makeStyles-cardHeader-375 makeStyles-cardHeaderPlain-376 makeStyles-cardHeaderImage-377"
                        >
                          <a
                            href="/list-ideas/nursery-list"
                          >
                            <img
                              alt="..."
                              className="makeStyles-rightImage-359"
                              src="nurserylist.jpg"
                            />
                          </a>
                          <div
                            style={
                              Object {
                                "backgroundImage": "url(nurserylist.jpg)",
                                "opacity": "1",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <footer
        className="makeStyles-footer-422 makeStyles-dark-426 makeStyles-big-423"
      >
        <div
          className="makeStyles-container-428"
        >
          <div>
            <div
              className="makeStyles-content-424"
            >
              <div
                className="MuiGrid-root makeStyles-grid-182  MuiGrid-container"
              >
                <div
                  className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 MuiGrid-grid-md-8"
                >
                  <h4
                    id="about"
                  >
                    About Us
                  </h4>
                  <p>
                    Ewelists is an online gift list tool, focused on helping new and expectant parents. Our goal is simple, to make creating a gift list for your little one's special occasion, such as baby shower, first birthday or Christmas faster and easier.
                     
                  </p>
                  <p>
                    We started by building the tool we would want to use, but would also love to hear your ideas. If you have any suggestions please contact us!
                     
                  </p>
                </div>
                <div
                  className="MuiGrid-root makeStyles-grid-286  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
                >
                  <h4>
                    Follow Us
                  </h4>
                  <ul
                    className="makeStyles-socialButtons-418"
                  >
                    <li>
                      <a
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-287 makeStyles-facebook-298 makeStyles-simple-309 makeStyles-justIcon-317"
                        href="https://www.facebook.com/ewelists"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        target="_blank"
                      >
                        <span
                          className="MuiButton-label"
                        >
                          <i
                            className="fab fa-facebook-square"
                          />
                        </span>
                        <span
                          className="MuiTouchRipple-root"
                        />
                      </a>
                    </li>
                    <li>
                      <a
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-287 makeStyles-twitter-297 makeStyles-simple-309 makeStyles-justIcon-317"
                        href="https://twitter.com/ewelists"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        target="_blank"
                      >
                        <span
                          className="MuiButton-label"
                        >
                          <i
                            className="fab fa-twitter"
                          />
                        </span>
                        <span
                          className="MuiTouchRipple-root"
                        />
                      </a>
                    </li>
                    <li>
                      <a
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-287 makeStyles-instagram-308 makeStyles-simple-309 makeStyles-justIcon-317"
                        href="https://www.instagram.com/ewelists/"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        target="_blank"
                      >
                        <span
                          className="MuiButton-label"
                        >
                          <i
                            className="fab fa-instagram"
                          />
                        </span>
                        <span
                          className="MuiTouchRipple-root"
                        />
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <hr />
          </div>
          <div>
            <div
              className="makeStyles-left-416"
            >
              <ul
                className="MuiList-root makeStyles-list-415 MuiList-padding"
              >
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-414 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-413"
                    href="/contact"
                  >
                    Contact Us
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-414 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-413"
                    href="/#about"
                  >
                    About us
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-414 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-413"
                    href="/privacy"
                  >
                    Privacy
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-414 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-413"
                    href="/terms"
                  >
                    Terms
                  </a>
                </li>
              </ul>
            </div>
            <div
              className="makeStyles-right-417"
            >
              © 
              2020
               ewelists
            </div>
          </div>
          <div
            className="makeStyles-clearFix-438"
          />
        </div>
      </footer>
    </div>
  </div>
</div>
`;
